# FIFA-web

./: .env.example  AGENTS.md  Dockerfile  docker-compose.yml  package.json  requirements.txt
apps/api/: .gitignore  .gitkeep  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260609_0001_initial_backend_schema.py
apps/api/app/: __init__.py  errors.py  main.py  models.py  store.py
apps/api/app/api/: deps.py  router.py  serializers.py
apps/api/app/api/routes/: account.py  admin.py  auth.py  football.py  metered.py  rag.py  weather.py
apps/api/app/core/: config.py  errors.py  security.py
apps/api/app/data/: __init__.py  world_cup_2026.py
apps/api/app/db/: seed.py  session.py
apps/api/app/models/: __init__.py  access_contracts.py  entities.py
apps/api/app/schemas/: __init__.py  rag.py  requests.py
apps/api/app/services/: __init__.py  access_control.py  admin_user.py  factory.py  football.py  rag_service.py  token_metering.py  token_quota.py  weather.py
apps/api/scripts/: seed_dev.py  smoke_test.py
apps/api/tests/: conftest.py  test_access_token_api.py  test_access_token_services.py  test_api_contract.py  test_football_catalog.py  test_migrations.py  test_rag_integration.py  test_rag_metering_integration.py
apps/web/: .gitignore  .gitkeep  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs/: rag-core.md
docs/api/: api-contract.md  data-model.md
docs/architecture/: branch-strategy.md  codex-branch-plan.md  overview.md  worktrees.md
docs/product/: access-token-model.md  pricing-model.md  product-scope.md
docs/qa/: acceptance-criteria.md  auto-qa-report.md  branch-merge-summary.md  final-qa-report.md  manual-verification-checklist.md  merge-readiness-report.md  risk-report.md  (+1 more)
infra/: README.md
(+86 files in other folders)
